# arepyextras-eo_products

./: README.md  pyproject.toml
arepyextras/eo_products/: __init__.py
arepyextras/eo_products/asar/: __init__.py
arepyextras/eo_products/asar/l1_products/: __init__.py  reader.py  utilities.py
arepyextras/eo_products/common/: __init__.py  protocols.py  utilities.py
arepyextras/eo_products/eos/: __init__.py
arepyextras/eo_products/eos/l1_products/: __init__.py  reader.py  utilities.py
arepyextras/eo_products/iceye/: __init__.py
arepyextras/eo_products/iceye/l1_products/: __init__.py  reader.py  utilities.py
arepyextras/eo_products/novasar/: __init__.py
arepyextras/eo_products/novasar/l1_products/: __init__.py  reader.py  utilities.py
arepyextras/eo_products/safe/: __init__.py
arepyextras/eo_products/safe/l1_products/: __init__.py  reader.py  utilities.py
arepyextras/eo_products/saocom/: __init__.py
arepyextras/eo_products/saocom/l1_products/: __init__.py  reader.py  utilities.py
docs/source/: changelog.rst  conf.py  index.rst  install.rst
docs/source/_static/custom_css/: custom.css
docs/source/reference/api/: asar.rst  common.rst  eos04.rst  iceye.rst  index.rst  novasar.rst  safe.rst  saocom.rst
docs/source/user_manual/: index.rst  l1_format_interfaces.rst  l1_generic_functions_quickstart.rst
tests/: __init__.py  test_product_protocol_compliance.py
